demos/node-selector/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-selector
spec:
  selector:
    app: node-selector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
