demos/node-selector/good/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-selector
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - node-selector-good.k8s.orb.local
      secretName: demo-tls
  rules:
    - host: node-selector-good.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-selector
                port:
                  number: 80
